# chiji-offchain

./: .env  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: lib.rs  mod.rs  post.rs  prelude.rs  proposal.rs  sea_orm_active_enums.rs  space.rs  user.rs  vote.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231013_000001_create_space_table.rs  m20231013_000001_create_user_table.rs  m20231013_000002_create_proposal_table.rs  m20231013_000002_create_space_table.rs  m20231013_000003_create_proposal_table.rs  m20231013_000003_create_vote_table.rs
src/: events.rs  main.rs
src/api/handlers/: error.rs  mod.rs
src/api/routes/: mod.rs
src/utils/: mod.rs
