[package]
name = "chiji-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
alloy = { version = "0.4.2", features = ["full"] }
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3.31"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.128"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.24.1", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }
warp = "0.3.3"
dotenv = "0.15.0"
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.50.0"
aws-sdk-s3 = { version = "1.23.0", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.1.8", features = ["hardcoded-credentials"] }
axum = { version = "0.7.7", features = ["multipart"] }
image = "0.25.1"
thiserror = "1.0.58"
tower-http = { version = "0.5.2", features = ["timeout"] }
